--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,10 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  /* background-color: #242424; */
   -webkit-text-size-adjust: 100%;
 }
 
 body {
+  background-color: #242424;
   margin: 0;
   padding: 0;
   min-width: 320px;
